--- a/YouTube_Final.ipynb
+++ b/YouTube_Final.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyAbUPGkECjLGTipq6KipdkOrfg5KXX5QBg'\n",
+    "api_key = 'Your_API_Key",
     "youtube = build('youtube', 'v3', developerKey=api_key)\n",
     "\n",
-    "# api_key = \"AIzaSyCkglXpsoXo7QjsLDBAL8mzCfX4YZzpdtg\""
+
    ]
   },
   {
@@ -412,15 +412,7 @@
    "id": "d86ed687-b04e-4d71-9668-314d40a50908",
    "metadata": {},
    "source": [
-    "'' #NK tunes - 6 videos\n",
-    "'UCO_NXoD5FC9H58ymRCDECAQ'  # Kannada music - 8 videos\n",
-    "'UCuI5XcJYynHa5k_lqDzAgwQ'  # Data Science Tamil -71 videos\n",
-    "'UCFQec-pTNXd8qtdOdtUULwg'  # Leron's universe - 38 videos\n",
-    "'UC58aOfdkdPKu0na-1hi5d6w' # Miracle makers -15 videos\n",
-    "'UCLH5ojAg1XIyxcOCazK4n-Q' # Alka Yagnik - 03 videos\n",
-    "'UCeMdpc7DBqGS58shLa7DOYg' # World funny animals - 70 videos\n",
-    "'UCmmsAsZx40YSA_aBKKNQtBQ' # Kaleeshwari Ramkumar - 3 videos"
-   ]
+    ]
   },
   {
    "cell_type": "code",
@@ -433,7 +425,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Connect to MongoDB \n",
-    "client = pymongo.MongoClient(\"mongodb+srv://hema_mukundan:ALMh_gr43SdABra@cluster0.ivcubxu.mongodb.net/\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://user_name:password@cluster0.ivcubxu.mongodb.net/\")\n",
     "mydb = client[\"YT_Project\"]\n",
     "channel_collection = mydb['yt_channels']"
    ]
@@ -517,7 +509,7 @@
     "connection = mysql.connector.connect(\n",
     "                host=\"localhost\",\n",
     "                user=\"root\",\n",
-    "                password=\"Data23Wrangl#\",\n",
+    "                password=\"password\",\n",
     "                database='yt_db'\n",
     "                )\n",
     "\n",
