--- a/YouTube_Final.ipynb
+++ b/YouTube_Final.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyAbUPGkECjLGTipq6KipdkOrfg5KXX5QBg'\n",
+    "api_key = 'your_api_key'\n",
     "youtube = build('youtube', 'v3', developerKey=api_key)\n",
     "\n",
-    "# api_key = \"AIzaSyCkglXpsoXo7QjsLDBAL8mzCfX4YZzpdtg\""
+   
    ]
   },
   {
@@ -433,7 +433,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# Connect to MongoDB \n",
-    "client = pymongo.MongoClient(\"mongodb+srv://hema_mukundan:ALMh_gr43SdABra@cluster0.ivcubxu.mongodb.net/\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://user_name:password@cluster0.ivcubxu.mongodb.net/\")\n",
     "mydb = client[\"YT_Project\"]\n",
     "channel_collection = mydb['yt_channels']"
    ]
@@ -516,8 +516,8 @@
     "# Connect to the MySQL database\n",
     "connection = mysql.connector.connect(\n",
     "                host=\"localhost\",\n",
-    "                user=\"root\",\n",
-    "                password=\"Data23Wrangl#\",\n",
+    "                user=\"user_name\",\n",
+    "                password=\"password\",\n",
     "                database='yt_db'\n",
     "                )\n",
     "\n",
